2012-05-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Constants.pm.in: Add NC, NC6 and NETCAT.

2012-05-10 Dan Locks <dwlocks@zmanda.com>
	* configure.in: update AC_INIT usage, specify tar-ustar and minimum
	  automake version.
	* config/amanda/version.m4: create new AMANDA_INIT_VERSION macro to
	  read FULL_VERSION or VERSION before AC_INIT.

2012-05-10  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/progs.m4: Define AMANDA_PROG_NC, set NC, NC6 and
	  NETCAT.
	* configure.in: use AMANDA_PROG_NC.
	* installcheck/Amanda_Device.pl: Use them.

2012-05-10 Dan Locks <dwlocks@zmanda.com>
	* Makefile.am: update required automake version

2012-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Device.pl: sleep to allow other process the time
	  to start listening.

2012-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amflock.c, common-src/match.c, common-src/util.c,
	  device-src/s3.c: Fix for deprecated G_STATIC_MUTEX_INIT.

2012-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c: Handle indirect tcp.
	* device-src/ndmp-device.c: Add INDIRECT property.
	* installcheck/Amanda_Device.pl: Test indirect tcp.
	* man/xml-source/amanda-devices.7.xml: Document INDIRECT property.
	* ndmp-src/ndmp4_translate.c: remove debugging statement.

2012-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amzfs-snapshot.pl: Typo.

2012-05-02  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/*.pl: use lib '@amperldir@';

2012-05-01  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amfetchdump.8.xml: Add --decrypt, --no-decrypt,
	  --server-decrypt, --client-decrypt, --compress, --no-compress,
	  --server-compress, --client-compress.
	* server-src/amfetchdump.pl: Document new options.

2012-05-01  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/s3-device.m4: Improve output.
	* config/amanda/device.m4: Add AMANDA_CHECK_DEVICES and