@@ -1,3 +1,7 @@
+2012-05-11  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/event.c: Improve debugging.
+	* server-src/dumper.c: Close data output in stop_dump.
+
 2012-05-10  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Constants.pm.in: Add NC, NC6 and NETCAT.
 
